--- a/step5-responsive.html
+++ b/step5-responsive.html
@@ -223,7 +223,7 @@ var geojson = [
     "properties": { "id": "charing-cross" } }
 ];
 var tiles = mapbox.layer().tilejson({
-  tiles: [ "http://a.tiles.mapbox.com/v3/landplanner.map-rlxlbbyj/{z}/{x}/{y}.png" ]
+  tiles: [ "http://a.tiles.mapbox.com/v3/landplanner.arches1,landplanner.map-y6huxuxo/{z}/{x}/{y}.png" ]
 });
 var spots = mapbox.markers.layer()
   // Load up markers from geojson data.
